# nestum

./: Agents.md  Cargo.toml  README.md  plan.md
.githooks/: pre-push
.github/workflows/: ci.yml
module_path_extractor/: Cargo.toml
module_path_extractor/src/: lib.rs
nestum/: Cargo.toml
nestum/src/: lib.rs
nestum/tests/: trybuild.rs
nestum/tests/ui/: external_inner.rs  fail_cfg.rs  fail_cfg.stderr  fail_enum_args.rs  fail_enum_args.stderr  fail_external_empty_args.rs  fail_external_empty_args.stderr  fail_external_invalid_path.rs  fail_external_invalid_path.stderr  fail_external_mismatch.rs  fail_external_mismatch.stderr  fail_external_missing_key.rs  fail_external_missing_key.stderr  fail_external_non_string.rs  fail_external_non_string.stderr  fail_external_not_found.rs  fail_external_not_found.stderr  fail_external_not_marked.rs  fail_external_not_marked.stderr  fail_external_not_tuple.rs  fail_external_not_tuple.stderr  fail_external_type_not_ident.rs  fail_external_type_not_ident.stderr  fail_include.rs  fail_include.stderr  fail_non_enum.rs  fail_non_enum.stderr  fail_path_attr.rs  fail_path_attr.stderr  fail_variant_attr.rs  fail_variant_attr.stderr  inner_included.rs  pass_basic.rs  pass_external.rs  pass_external_cross_file.rs  pass_match.rs  pass_match_alias.rs  pass_match_mixed.rs  pass_match_module.rs  pass_match_or.rs  (+1 more)
scripts/: setup-hooks.sh
