[package]
name = "nestum"
version = "0.1.0"
edition = "2021"
description = "Proc-macro for nested enum paths like Enum1::Variant1::VariantA"
license = "MIT"
repository = "https://github.com/eboody/nestum"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
module_path_extractor = "0.2.2"

[dev-dependencies]
trybuild = "1"
